12-k8s-1_5/back.svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend-svc
spec:
    ports:
     - name: web
       port: 80
    selector:
       tier: backend
