12-k8s-1_5/front.svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
spec:
    ports:
     - name: web
       port: 80
    selector:
       tier: frontend
