12-k8s-1_5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: debian
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: frontend-svc
                port:
                  name: web
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  name: web
